--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokemon-App</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-</head>
+<link rel="stylesheet" href="assets/css/style.css">
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
